tests/ui/assumptions_on_binders/placeholder-assumptions-issue-157840.stderr
error[E0277]: the trait bound `(): Trait<fn(for<'a> fn(<T as Proj<'a>>::Assoc))>` is not satisfied
  --> $DIR/placeholder-assumptions-issue-157840.rs:12:9
   |
LL |     (): Trait<<T as Proj<'a>>::Assoc>,
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Trait<fn(for<'a> fn(<T as Proj<'a>>::Assoc))>` is not implemented for `()`
   |
help: consider extending the `where` clause, but there might be an alternative better way to express this requirement
   |
LL |     (): Trait<<T as Proj<'a>>::Assoc>, (): Trait<fn(for<'a> fn(<T as Proj<'a>>::Assoc))>
   |                                        +++++++++++++++++++++++++++++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
